crates/tui/tests/storybook/snapshots/app_prompt__prompt_working_bar_width_ladder.step-3.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 20 8
  4   0   6 fg=AnsiValue(237)
  4   6  12 fg=AnsiValue(244)
  4  19   1 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  20 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10   2 bg=AnsiValue(233)
  7  12   8 fg=AnsiValue(244) bg=AnsiValue(233)
