crates/tui/tests/storybook/snapshots/app_prompt__prompt_working_bar_width_ladder.step-4.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 16 8
  4   0   2 fg=AnsiValue(237)
  4   2  12 fg=AnsiValue(244)
  4  15   1 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  16 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10   6 bg=AnsiValue(233)
