crates/tui/tests/storybook/snapshots/app_prompt__slash_command_accent_survives_lua_reload.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

 /permissions



 /permissions  manage session permission
────────────────────────────────────────
 /permissions
────────────────────────────────────────
 ○ normal                       1:1 100%
