crates/tui/tests/storybook/snapshots/app_prompt__slash_command_accent_survives_lua_reload.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 40 10
  0   0  39 bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1  12 fg=AnsiValue(208) bg=AnsiValue(236) attrs=bold
  1  13  26 bg=AnsiValue(236)
  2   0  39 bg=AnsiValue(236)
  5   0   1 bg=AnsiValue(237)
  5   1  12 fg=AnsiValue(208) bg=AnsiValue(237)
  5  13   2 bg=AnsiValue(237)
  5  15  25 bg=AnsiValue(237) attrs=dim
  6   0  40 fg=AnsiValue(237)
  7   1  12 fg=AnsiValue(208)
  7  13   1 fg=Black bg=White
  8   0  40 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  22 bg=AnsiValue(233)
  9  32   8 fg=AnsiValue(244) bg=AnsiValue(233)
